# novu-framework

./: CHANGELOG.md  README.md  index.html  novu_framework.html  pyproject.toml  search.js
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  release.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
.windsurf/rules/: specify-rules.md
.windsurf/workflows/: speckit.plan.md
novu_framework/: workflow.html
specs/001-flask-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-flask-support/checklists/: requirements.md
specs/001-flask-support/contracts/: openapi.yaml
specs/001-get-request-handler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-get-request-handler/checklists/: requirements.md
specs/001-get-request-handler/contracts/: openapi.yaml
specs/001-python-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-framework/checklists/: requirements.md
src/novu_framework/: __init__.py  common.py  constants.py  error_handling.py  exceptions.py  fastapi.py  flask.py  workflow.py
src/novu_framework/steps/: __init__.py  base.py  email.py  in_app.py  push.py  sms.py
src/novu_framework/validation/: __init__.py  api.py  controls.py  payload.py
tests/: test_template.py
tests/contract/: test_api_contract.py
tests/integration/: test_controls.py  test_fastapi.py  test_fastapi_code.py  test_fastapi_discover.py  test_fastapi_health_check.py  test_flask.py  test_flask_code.py  test_flask_discover.py  test_flask_health_check.py  test_workflow_execution.py
tests/quickstart/: test_quickstart.py
tests/unit/: test_base_step.py  test_code_actions.py  test_common_base.py  test_constants.py  test_controls.py  test_discover_actions.py  test_error_handling.py  test_fastapi.py  test_fastapi_base.py  test_fastapi_get_actions.py  test_fastapi_internal.py  test_flask.py  test_flask_base.py  test_flask_get_actions.py  test_flask_internal.py  test_get_actions.py  test_skip_with_controls.py  test_step_handler.py  test_step_handler_coverage.py  test_step_methods_controls.py  test_step_methods_pydantic_controls.py  test_steps.py  test_trigger.py  test_validation_api.py  test_workflow.py  test_workflow_auto_extract.py  test_workflow_decorator.py  test_workflow_registry.py  test_workflow_validation.py
