[project]
name = "novu-framework"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Novu Framework allows you to write notification workflows in your codebase."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
build = [
    "build==1.4.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "black==25.12.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.14.13",
]
test = [
    "coverage==7.13.1",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/novu-framework"
Issues = "https://github.com/remarkablemark/novu-framework/issues"

[tool.black]
fast = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    '^tests/.*'
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]
