[project]
name = "novu-framework"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Novu Framework allows you to write notification workflows in your codebase."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Framework :: Pydantic",
    "Framework :: FastAPI",
    "Framework :: Flask",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "alert",
    "alerts",
    "api",
    "events",
    "fastapi",
    "flask",
    "framework",
    "library",
    "messaging",
    "notification",
    "notifications",
    "novu",
    "pydantic",
    "sdk",
    "workflow",
    "workflows",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
build = [
    "build==1.4.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "black==26.1.0",
    "fastapi==0.129.0",
    "flask[async]==3.1.3",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.15.1",
]
test = [
    "coverage==7.13.4",
    "fastapi==0.129.0",
    "flask[async]==3.1.3",
    "httpx==0.28.1",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/novu-framework"
Issues = "https://github.com/remarkablemark/novu-framework/issues"

[tool.black]
fast = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    '^tests/.*'
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]
